--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -150,7 +150,9 @@ html {
   display: none;
 }
 
+
 /*
+**************************************************************************
 # Word breaking
 source: http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
 
@@ -176,7 +178,9 @@ source: http://kenneth.io/blog/2012/03/04/word-wrapping-hypernation-using-css/
 
 @slide-indicator-width: 0.5em;
 
+
 /*
+**************************************************************************
 # Colors
 
 Text colors
