--- a/frontend/core/src/main/webapp/static/less/notifications.less
+++ b/frontend/core/src/main/webapp/static/less/notifications.less
@@ -20,7 +20,9 @@ Onboarding bubbles, modals and omnibar in-app notifications.
   color: @danger-text;
 }
 
+
 /*
+**************************************************************************
 # Onboarding
 
 ```markup
@@ -68,7 +70,9 @@ Onboarding bubbles, modals and omnibar in-app notifications.
   margin-left: -16px;
 }
 
+
 /*
+**************************************************************************
 # Modals
 
 TODO: Modals will be gone soon?
@@ -107,8 +111,8 @@ TODO: Modals will be gone soon?
 }
 
 /*
+**************************************************************************
 # Toaster notification
-
 TODO: Example needed
 */
 
