--- a/frontend/core/src/main/webapp/static/less/widgets.less
+++ b/frontend/core/src/main/webapp/static/less/widgets.less
@@ -658,10 +658,9 @@ TODO: Example needed
   border: none;
 }
 
-/*
-clear child float (pika-lendar), using the famous micro clearfix hack
-http://nicolasgallagher.com/micro-clearfix-hack/
-*/
+// clear child float (pika-lendar), using the famous micro clearfix hack
+// http://nicolasgallagher.com/micro-clearfix-hack/
+
 .pika-single:before,
 .pika-single:after {
   content: " ";
@@ -884,20 +883,10 @@ http://nicolasgallagher.com/micro-clearfix-hack/
 TODO: Do we need an example?
 */
 
-/*
- * swiper 2.4.3
- * Mobile touch slider and framework with hardware accelerated transitions
- *
- * http://www.idangero.us/sliders/swiper/
- *
- * Copyright 2010-2014, Vladimir Kharlampidi
- * The iDangero.us
- * http://www.idangero.us/
- *
- * Licensed under GPL & MIT
- *
- * Released on: January 29, 2014
- */
+// swiper 2.4.3
+// Mobile touch slider and framework with hardware accelerated transitions
+// http://www.idangero.us/sliders/swiper/
+
  .swiper-container {
   margin:0 auto;
   overflow:hidden;
@@ -954,7 +943,7 @@ TODO: Do we need an example?
   float: left;
 }
 
-/* IE10 Windows Phone 8 Fixes */
+// IE10 Windows Phone 8 Fixes
 .swiper-wp8-horizontal {
   -ms-touch-action: pan-y;
 }
@@ -962,10 +951,9 @@ TODO: Do we need an example?
   -ms-touch-action: pan-x;
 }
 
-/* ===============================================================
-Your custom styles, here you need to specify container's and slide's
-sizes, pagination, etc.
-================================================================*/
+//Your custom styles, here you need to specify container's and slide's
+//sizes, pagination, etc.
+
 .swiper-container {
   /* Specify Swiper's Size: */
 
