--- a/frontend/core/src/main/webapp/static/less/inputs.less
+++ b/frontend/core/src/main/webapp/static/less/inputs.less
@@ -12,6 +12,7 @@ All forms and buttons used in extended mind UI.
 @plus-button-width: 27px;
 @icon-button-width: @plus-button-width;
 
+
 /*
 ********************************************************************************
 # Forms
@@ -121,6 +122,7 @@ Date input gets formatted by `.date-input-placeholder`.
   display: block;
 }
 
+
 /*
 ## Form wrapping (horizontal positioning)
 Following are used to divide form items horizontally:
@@ -171,6 +173,7 @@ Input on the left and button on the right OR checkbox on the left, input in the 
     padding-left: 20px;
   }
 }
+
 
 /*
 ********************************************************************************
@@ -402,7 +405,11 @@ Use `.vertical-buttons` to make buttons align in a vertical column
   }
 }
 
-// CHECKBOXES
+
+/*
+******************************************************************
+# Checkboxes
+*/
 
 /*
 Basic checkbox
@@ -458,6 +465,7 @@ input[type=date] {
   padding-left: 0;
   padding-right: 0;
 }
+
 
 /*
 ********************************************************************************
