--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -7,7 +7,6 @@ TODO: em grid structure explained in plain English (when new grid structure deci
 */
 
 
-
 /*
 **************************************************************************
 # Columns
@@ -140,7 +139,6 @@ And to four sections:
 }
 
 
-
 /*
 **************************************************************************
 # Grid
@@ -184,7 +182,6 @@ div#root {
     max-width: @two-column-grid-main-width;
   }
 }
-
 
 
 /*
@@ -246,7 +243,6 @@ header {
 }
 
 
-
 /*
 **************************************************************************
 # Content
@@ -294,11 +290,12 @@ header {
   }
 }
 
+
 /*
 **************************************************************************
 # Swiper
 
-// TODO: Do we want an example of a swiper in the styleguide?
+TODO: Do we want an example of a swiper in the styleguide?
 */
 
 .swiper-container, .swiper-wrapper, .swiper-slide {
@@ -334,7 +331,6 @@ header {
     }
   }
 }
-
 
 
 /*
@@ -387,11 +383,12 @@ the main container will be horizontally and vertically centered.
     display: none;
   }
 
+
 /*
 **************************************************************************
 # Login, Signup and Launch
 
-// TODO: Explain verbally, when new grid done
+TODO: Explain verbally, when new grid done
 */
 
 @login-content-height: @vertical-grid*5.1;
@@ -486,7 +483,6 @@ section#forgot, section#verify {
 }
 
 
-
 /*
 **************************************************************************
 # About
@@ -496,7 +492,6 @@ section#forgot, section#verify {
 #about-help {
   line-height: @vertical-grid-half;
 }
-
 
 
 /*
@@ -515,7 +510,6 @@ section#forgot, section#verify {
 .tasks-notes-container {
   padding-top: @vertical-grid-half;
 }
-
 
 
 /*
