--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -129,7 +129,13 @@ html {
 - full search sr-only
 -> jos #id, niin uusi haku id:llä
    (haku vain app ja less hakemistoista)
+
+   voi poistaa, jos ei 
+   - getElementById
+   - #ID
+   - find
 */
+
 .sr-only {
   position: absolute;
   width: 1px;
