More work on new LESS stylings

--- a/frontend/core/src/main/webapp/static/less/icons.less
+++ b/frontend/core/src/main/webapp/static/less/icons.less
@@ -49,6 +49,7 @@ TODO: Icons are not working yet with Phytoplankton
 .icon-logo-with-text {
   color: @logo;
   font-size: @banner-logo-size;
+  line-height: @banner-logo-size;
 }
 
 // beta text
