--- a/frontend/core/src/main/webapp/static/less/typography.less
+++ b/frontend/core/src/main/webapp/static/less/typography.less
@@ -124,6 +124,18 @@ Font control with alignment:
   }
 }
 
+//////// NEW START ////////////////////////
+
+/*
+Use `.text-details` to separate details from body text.
+*/
+.text-details {
+  font-size: @font-small-size;
+}
+
+//////// NEW END ////////////////////////
+
+
 #email-verification-status {
   font-size: @font-smallest-size;
   display: block;
