--- a/frontend/core/src/main/webapp/static/less/foundation.less
+++ b/frontend/core/src/main/webapp/static/less/foundation.less
@@ -127,13 +127,15 @@ html {
 
 /* TODO: TO BE REMOVED
 - full search sr-only
--> jos #id, niin uusi haku id:llä
-   (haku vain app ja less hakemistoista)
+-> jos #id, niin uusi haku id:llä seuraavista hakemistoista:
+
+/Users/ilo/devel/extendedmind/frontend/core/src/main/webapp/static/app,/Users/ilo/devel/extendedmind/frontend/core/src/main/webapp/static/less
 
    voi poistaa, jos ei
    - getElementById
    - #ID
-   - find
+   - find()
+   - accordion*
 */
 
 .sr-only {
