--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -185,10 +185,24 @@ Use `.group-instruction` to create an instruction block in the middle of a secti
     padding-top: @vertical-grid;
   }
 }
-
 .group-instruction ~ .group-btn {
   padding-top: @vertical-grid;
 }
+
+/*
+Use `.group-mixed` to create horizontal collections of different elements.
+*/
+.group-mixed {
+
+}
+
+/*
+`.group-error` groups together multiple error messages.
+*/
+.group-error {
+  line-height: @vertical-grid-half;
+}
+
 
 
 //////// NEW END ////////////////////////
