More work on new layout

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -84,6 +84,17 @@ TODO: em grid structure explained in plain English (when new grid structure deci
   }
 }
 
+
+.container-toolbar {
+  // menu     title    omnibar
+}
+
+.container-titlebar {
+  // < save
+  //    title
+  //  inbox task note list
+}
+
 /*
 `.row` is uses horizontal alignment. It specifies the left and right margin and is used
 primarily under `.container-content`.
