instruction text styling

--- a/frontend/core/src/main/webapp/static/less/layout.less
+++ b/frontend/core/src/main/webapp/static/less/layout.less
@@ -508,6 +508,10 @@ header {
   }
 }
 
+.container-navigation-slide {
+  // TODO: Do we need this?
+}
+
 
 /*
 **************************************************************************
