--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -1,6 +1,7 @@
 @import "foundation.less";
 @import "typography.less";
 @import "layout.less";
+@import "icons.less";
 
 /*
 <h1 class="main-heading">Links</h1>
@@ -79,4 +80,19 @@ a.click-to-slide {
     line-height: normal;
     color: @content;
   }
+}
+
+.link-navigation-back {
+  font-family: 'icomoon';
+  font-size: 8px !important;
+  padding-right: 5px;
+  .icon-arrow-left;
+}
+
+.link-navigation-forward {
+  float: right;
+  font-family: 'icomoon';
+  font-size: 8px !important;
+  padding-left: 5px;
+  .icon-arrow-right;
 }
