--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -162,10 +162,15 @@ A good naming convention will tell you and your team
 * where a class can be used;
 * what (else) a class might be related to.
 
-The naming convention we follow is:
-* hyphen (-) delimited strings with CSS
-* CamelCases with Angular
+The naming conventions we follow are:
 * Definitions are not abbreviated, unless it's 100% sure (not everyone gets `.btn`)
+
+CSS
+* hyphen (-) to separate words
+* double hyphen (--) to specify subtargets, e.g. `.group-mixed--left` 
+
+Angular
+* CamelCases with Angular
 
 # CSS Selectors
 
