--- a/frontend/core/src/main/webapp/static/less/em.less
+++ b/frontend/core/src/main/webapp/static/less/em.less
@@ -157,20 +157,14 @@ Comments that don't belong to Styleguide (e.g. sources, code comments) should be
 
 Naming conventions in CSS are hugely useful in making your code more strict, more transparent, and more informative.
 
-A good naming convention will tell you and your team
-* what type of thing a class does;
-* where a class can be used;
-* what (else) a class might be related to.
-
-The naming conventions we follow are:
+## Classes
+* We always start with the main word, e.g. `.btn-warning` instead of `.warning-button`
 * Definitions are not abbreviated, unless it's 100% sure (not everyone gets `.btn`)
-
-CSS
 * hyphen (-) to separate words
-* double hyphen (--) to specify subtargets, e.g. `.group-mixed--left` 
+* double hyphen (--) to specify subtargets, e.g. `.group-mixed--left`
 
-Angular
-* CamelCases with Angular
+## Ids
+* Use camelCases, starting with lowercase
 
 # CSS Selectors
 
