--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -82,17 +82,16 @@ a.click-to-slide {
   }
 }
 
-.link-navigation-back {
+.link-navigation-back:before {
   font-family: 'icomoon';
   font-size: 8px !important;
   padding-right: 5px;
-  .icon-arrow-left;
+  content: @icon-arrow-left;
 }
 
-.link-navigation-forward {
-  float: right;
+.link-navigation-forward:after {
   font-family: 'icomoon';
   font-size: 8px !important;
   padding-left: 5px;
-  .icon-arrow-right;
+  content: @icon-arrow-right;
 }
