--- a/frontend/core/src/main/webapp/static/less/links.less
+++ b/frontend/core/src/main/webapp/static/less/links.less
@@ -83,15 +83,15 @@ a.click-to-slide {
 }
 
 .link-navigation-back:before {
-  font-family: 'icomoon';
-  font-size: 8px !important;
-  padding-right: 5px;
+  .set-icon-font;
   content: @icon-arrow-left;
+  font-size: 8px;
+  padding-right: 5px;
 }
 
 .link-navigation-forward:after {
-  font-family: 'icomoon';
-  font-size: 8px !important;
-  padding-left: 5px;
+  .set-icon-font;
   content: @icon-arrow-right;
+  font-size: 8px;
+  padding-left: 5px;
 }
